--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <script src="script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 p-8">
-  <div class="max-w-4xl mx-auto bg-white shadow-xl p-6 rounded-xl">
+<body class="bg-gray-100 p-4 sm:p-8">
+  <div class="max-w-4xl mx-auto bg-white shadow-xl p-4 sm:p-6 rounded-xl">
     <h1 class="text-3xl font-bold text-center mb-6">🤖 AI 面試官模擬器</h1>
 
     <div class="mb-4">
@@ -46,7 +46,7 @@
 
     <div class="mt-6">
       <h2 class="text-lg font-semibold mb-2">📝 面試進行中：</h2>
-      <div id="chat-box" class="h-64 overflow-y-auto bg-gray-50 p-4 border rounded-lg space-y-2 text-sm">
+      <div id="chat-box" class="min-h-[16rem] max-h-[24rem] md:max-h-[32rem] overflow-y-auto bg-gray-50 p-4 border rounded-lg space-y-2 text-sm">
         <!-- AI 與使用者對話紀錄將顯示在這裡 -->
       </div>
     </div>
@@ -62,7 +62,7 @@
       </button>
     </div>
 
-    <audio id="tts-audio" hidden controls></audio>
+    <audio id="tts-audio" controls playsinline autoplay></audio>
   </div>
 </body>
 </html>
