--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 
     <div class="mt-6">
       <h2 class="text-lg font-semibold mb-2">📝 面試進行中：</h2>
+      <div class="bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4 mb-4" role="alert">
+        <p class="font-bold">使用說明：</p>
+        <p>請點擊「開始說話」按鈕後開始對麥克風說話，說話結束後，請務必點擊「結束說話」按鈕，您的語音才會被傳送至後端進行處理。</p>
+      </div>
       <div id="chat-box" class="min-h-[16rem] max-h-[24rem] md:max-h-[32rem] overflow-y-auto bg-gray-50 p-4 border rounded-lg space-y-2 text-sm">
         <!-- AI 與使用者對話紀錄將顯示在這裡 -->
       </div>
