增加面試進度條

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         <p class="font-bold">使用說明：</p>
         <p>請點擊「開始說話」按鈕後開始對麥克風說話，說話結束後，請務必點擊「結束說話」按鈕，您的語音才會被傳送至後端進行處理。</p>
       </div>
+
+      <div id="interview-progress" class="text-right text-gray-600 text-sm mb-2"></div>
       <div id="chat-box" class="min-h-[16rem] max-h-[24rem] md:max-h-[32rem] overflow-y-auto bg-gray-50 p-4 border rounded-lg space-y-2 text-sm">
         <!-- AI 與使用者對話紀錄將顯示在這裡 -->
       </div>
