--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 
     <div id="selected-job" class="mb-6 text-green-700 font-semibold"></div>
 
+    <div class="mb-4">
+      <label class="block font-medium text-gray-700 mb-2">選擇 AI 模型：</label>
+      <select id="model-select" class="block w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none">
+        <option value="gemini-2.5-flash">Gemini 2.5 Flash (Google)</option>
+        <option value="gemma-1.1-2b-it">Gemma 1.1 2B IT (Google)</option>
+      </select>
+    </div>
+
     <div class="mb-6">
       <button id="start-interview" class="bg-green-600 text-white px-6 py-2 rounded-lg hover:bg-green-700">
         開始模擬面試
