--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <label class="block font-medium text-gray-700 mb-2">選擇 AI 模型：</label>
       <select id="model-select" class="block w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none">
         <option value="gemini-2.5-flash">Gemini 2.5 Flash (Google)</option>
-        <option value="gemma-1.1-2b-it">Gemma 1.1 2B IT (Google)</option>
+        <option value="gemma-3-1b-it">Gemma 3.1B IT (Google)</option>
       </select>
     </div>
 
