--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    #chat-box {
+      -webkit-overflow-scrolling: touch; /* For smoother scrolling on iOS */
+      overscroll-behavior-y: contain; /* Prevents scroll chaining */
+    }
+  </style>
 </head>
 <body class="bg-gray-100 p-4 sm:p-8">
   <div class="max-w-4xl mx-auto bg-white shadow-xl p-4 sm:p-6 rounded-xl">
