1 fix(frontend): Improve chat box scrolling on Android    2    3 Adds `overflow: auto;` and `touch-action: pan-y;` to the `#chat-box`    4 element's CSS in `index.html`. This ensures proper vertical scrolling    5 behavior on Android devices, complementing existing iOS-specific    6 scrolling optimizations.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     #chat-box {
+      overflow-y: scroll; /* Ensure vertical scrolling is always enabled */
       -webkit-overflow-scrolling: touch; /* For smoother scrolling on iOS */
       overscroll-behavior-y: contain; /* Prevents scroll chaining */
+      touch-action: pan-y; /* Allows vertical scrolling on touch devices */
     }
   </style>
 </head>
